--- a/index.html
+++ b/index.html
@@ -1,7 +1,36 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+<title>Tyler Genao</title>
+</head>
+
 <body>
-<h1>Hello World!</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1 width="60%" align="left"> <font size="+3"><b>Tyler Genao</b></font></h1>
+
+<table width="100%" cellspacing="0">
+<tbody>
+
+<tr>
+<td align="left" width="10%"> 
+<br>
+</td>
+
+<td>
+School of Mathematics<br>
+University of Georgia<br>
+452 Boyd Graduate Studies<br>
+1023 D. W. Brooks Drive<br>
+Athens, GA 30602.<br>
+<b>Office:</b>&nbsp; Boyd-427F <br>
+<b>E-mail:</b>&nbsp; <a href="mailto:tylergenao@uga.edu">tylergenao@uga.edu</a> 
+<br>
+</td>
+</tr>
+
+</tbody>
+</table>
+
+
 </body>
 </html>
