--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </td>
 
 <td>
-School of Mathematics<br>
+School of Math.<br>
 University of Georgia<br>
 452 Boyd Graduate Studies<br>
 1023 D. W. Brooks Drive<br>
