--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 
 <tr>
 <td align="left" width="10%"> 
+<img style="width: 400px; height: 400px;" alt="photo" src="JMM2016.jpg">
 <br>
 </td>
 
+
 <td>
-School of Math.<br>
+School of Mathematics<br>
 University of Georgia<br>
-452 Boyd Graduate Studies<br>
+Boyd Graduate Studies Research Center<br>
 1023 D. W. Brooks Drive<br>
-Athens, GA 30602.<br>
+Athens, GA 30602<br>
 <b>Office:</b>&nbsp; Boyd-427F <br>
-<b>E-mail:</b>&nbsp; <a href="mailto:tylergenao@uga.edu">tylergenao@uga.edu</a> 
+<b>e-mail:</b>&nbsp; <a href="mailto:tylergenao@uga.edu">tylergenao@uga.edu</a> 
 <br>
 </td>
 </tr>
