--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <tr>
 <td align="left" width="10%"> 
-<img style="width: 400px; height: 400px;" alt="photo" src="JMM2016.jpg">
+<img style="width: 200px; height: 200px;" alt="photo" src="JMM2016.jpg">
 <br>
 </td>
 
@@ -24,7 +24,7 @@ University of Georgia<br>
 Boyd Graduate Studies Research Center<br>
 1023 D. W. Brooks Drive<br>
 Athens, GA 30602<br>
-<b>Office:</b>&nbsp; Boyd-427F <br>
+<b>Office:</b>&nbsp; 427F <br>
 <b>e-mail:</b>&nbsp; <a href="mailto:tylergenao@uga.edu">tylergenao@uga.edu</a> 
 <br>
 </td>
