--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@ Athens, GA 30602<br>
 </tbody>
 </table>
 
-
+If you're seeing this site, please note that it's currently under construction! I am learning github as we speak...
 </body>
 </html>
